# vuquest-3320

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: command.rs  lib.rs  result.rs
src/command/: image_ship.rs  image_snap.rs  macros.rs  manual_trigger.rs  mobile_phone.rs  pdf.rs  qr.rs  query.rs  serial_trigger.rs  software_rev.rs  symbologies.rs  trigger.rs
src/command/image_ship/: blur_image.rs  compensation.rs  document_filter.rs  edge_sharpen.rs  gamma_correction.rs  histogram_ship.rs  histogram_stretch.rs  image_rotate.rs  infinity_filter.rs  invert_image.rs  jpeg_image_quality.rs  noise_reduction.rs  pixel_depth.rs  pixel_ship.rs  protocol.rs
src/command/image_snap/: beeper.rs  delta_for_acceptance.rs  exposure.rs  gain.rs  imaging_style.rs  led.rs  target_set_point.rs  target_white_value.rs  update_tries.rs  wait_for_trigger.rs
