[package]
name = "vuquest-3320"
version = "0.1.1"
edition = "2021"
authors = ["Vuquest 3320 developers", "Decapod ATM developers"]
description = "Serial communication protocol for Honeywell BCS devices"
keywords = ["serial", "honeywell", "barcode-scanner", "vuquest", "3320"]
categories = ["hardware-support"]
repository = "https://github.com/decapod-atm/vuquest-3320"
license = "MIT"

[dependencies.env_logger]
version = "0.11"

[dependencies.log]
version = "0.4"
default-features = false

[dependencies.serialport]
version = "4.2"
default-features = false

[dependencies.paste]
version = "1.0"

[features]
std = []
